Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20525

rocksdb compilation fails on Windows in debug mode due to unresolved my_assert variable

    XMLWordPrintable

Details

    Description

      rocksdb_aux_lib.lib(rdb_perf_context.obj) : error LNK2001: unresolved external symbol my_assert [C:\work\10.5\xxx\stora
      ge\rocksdb\rocksdb.vcxproj]
      rocksdb_aux_lib.lib(event_listener.obj) : error LNK2001: unresolved external symbol my_assert [C:\work\10.5\xxx\storage
      \rocksdb\rocksdb.vcxproj]
      rocksdb_aux_lib.lib(rdb_cf_options.obj) : error LNK2001: unresolved external symbol my_assert [C:\work\10.5\xxx\storage
      \rocksdb\rocksdb.vcxproj]
      C:\work\10.5\xxx\storage\rocksdb\Debug\ha_rocksdb.dll : fatal error LNK1120: 1 unresolved externals [C:\work\10.5\xxx\s
      torage\rocksdb\rocksdb.vcxproj]

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              wlad Vladislav Vaintroub
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.5h
                  2.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.