include/my_dbug.h
@@ -35,7 +35,6 @@ struct _db_stack_frame_ {
 };
 
 struct  _db_code_state_;
-extern MYSQL_PLUGIN_IMPORT my_bool my_assert;
 extern  my_bool _dbug_on_;
 extern  my_bool _db_keyword_(struct _db_code_state_ *, const char *, int);
 extern  int _db_explain_(struct _db_code_state_ *cs, char *buf, size_t len);
@@ -59,6 +58,7 @@ extern  void _db_dump_(uint _line_,const char *keyword,
 extern  void _db_end_(void);
 extern  void _db_lock_file_(void);
 extern  void _db_unlock_file_(void);
+extern  my_bool _db_my_assert(void);
 extern  FILE *_db_fp_(void);
 extern void _db_flush_(void);
 extern void dbug_swap_code_state(void **code_state_store);
@@ -105,7 +105,7 @@ extern int (*dbug_sanity)(void);
 #define DBUG_LOCK_FILE _db_lock_file_()
 #define DBUG_UNLOCK_FILE _db_unlock_file_()
 #define DBUG_ASSERT(A) do { if (!(A)) { _db_flush_();                      \
-      if (my_assert) assert(A);                                            \
+      if (_db_my_assert()) assert(A);                                            \
       else fprintf(stderr, "%s:%d: assert: %s\n", __FILE__, __LINE__, #A); \
 }} while (0)
 #define DBUG_SLOW_ASSERT(A) DBUG_ASSERT(A)
